--- a/index.html
+++ b/index.html
@@ -295,10 +295,9 @@
   <!-- Footer με social icons -->
   <footer>
     <div class="social-icons" data-aos="zoom-in">
-      <a href="https://discord.gg/VavSE5v5" target="_blank"><i class="fa-brands fa-discord"></i></a>
-      <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-      <a href="https://www.tiktok.com/" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
-      <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+      <a href="https://discord.gg/hNDFmD5dD5" target="_blank"><i class="fa-brands fa-discord"></i></a>
+      <a href="www.tiktok.com/@realdobaros" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+      <a href="https://www.youtube.com/channel/UCgb0ziRZh6OVkvLz2sXRdrA" target="_blank"><i class="fa-brands fa-youtube"></i></a>
     </div>
     <p>© 2025 DC Reborn | All Rights Reserved</p>
   </footer>
@@ -336,3 +335,4 @@
 
 </body>
 </html>
+
