--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
       <a href="#">Home</a>
       <a href="#features">Features</a>
       <a href="#team">Team</a>
-      <a href="https://discord.gg/VavSE5v5" target="_blank">Discord</a>
+      <a href="https://discord.gg/hNDFmD5dD5" target="_blank">Discord</a>
     </nav>
   </header>
 
@@ -245,7 +245,7 @@
       <h1>DC Reborn</h1>
       <p>Η απόλυτη εμπειρία RolePlay στο GTA V. Με μοναδικά scripts, υψηλή απόδοση και προστασία, η κοινότητα μας σας περιμένει!</p>
       <div class="cta">
-        <a href="https://discord.gg/VavSE5v5" target="_blank" class="btn btn-primary">Join Now Discord</a>
+        <a href="https://discord.gg/hNDFmD5dD5" target="_blank" class="btn btn-primary">Join Now Discord</a>
         <a href="fivem://connect/IP_SERVER_SOU" class="btn btn-outline">▶ Connect & Play RP</a>
       </div>
     </div>
@@ -335,4 +335,5 @@
 
 </body>
 </html>
+
 
