--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
   <footer>
     <div class="social-icons" data-aos="zoom-in">
       <a href="https://discord.gg/hNDFmD5dD5" target="_blank"><i class="fa-brands fa-discord"></i></a>
-      <a href="www.tiktok.com/@realdobaros" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+      <a href="https://www.tiktok.com/@realdobaros" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
       <a href="https://www.youtube.com/channel/UCgb0ziRZh6OVkvLz2sXRdrA" target="_blank"><i class="fa-brands fa-youtube"></i></a>
     </div>
     <p>© 2025 DC Reborn | All Rights Reserved</p>
@@ -335,5 +335,6 @@
 
 </body>
 </html>
+
 
 
